Changes with Apache 1.3.15

  *) Add a new LogFormat directive, %c, that will log connection
     status at the end of the response as follows:
     'X' - connection aborted before the response completed.
     '+' - connection may be kept-alive by the server.
     '-' - connection will be closed by the server.
     [Bill Stoddard <stoddard@apache.org>]
     
  *) Normalize all NetWare config directive paths and filespecs to
     their canonical names.  [Brad Nicholes <bnicholes@novell.com>]

  *) Update the mime.types file to the registered media types as
     of 2000-10-19. PR#6613 [Carsten Klapp <carsten.klapp@home.net>,
     Tony Finch]

  *) Restore functionality broken by the mod_rewrite security fix:
     rewrite map lookup keys and default values are now expanded
     so that the lookup can depend on the requested URI etc.
     PR #6671 [Tony Finch]

Changes with Apache 1.3.14

  *) Fixes to allow compilation on NetWare [Brad Nicholes
     <bnicholes@novell.com>]

Changes with Apache 1.3.13 [not released]

  *) NOTE: A number of Win32 symbols were exported without explicit
     declaration in the ApacheCore.def file.  These are now exported
     with the same ordinal export values from 1.3.12, but are now
     named consistent with Apache's conventions. [William Rowe]

  *) Add support for a "conf directory" which operates similar to
     /etc/rc.d/init. Basically, if a config file is actually a
     directory, all the files in that directory will be parsed
     as conf files. PR #6397 [Jim Jagielski, Lionel Clark
     <bishop@platypus.bc.ca>]

  *) Initial support added for mod_proxy under MPE/iX.
     [Mark Bixby <mark_bixby@hp.com>]

  *) Refined UID/GID management and permissions on MPE/iX to deal 
     with some limitations. [Mark Bixby <mark_bixby@hp.com>]

  *) Updated the MPE DSO code to be compatible with an OS patch that
     fixed an earlier DSO problem,  #include tweakage required for 