@@ -1090,6 +1090,9 @@ API_EXPORT_NONSTD(const char *) ap_set_file_slot(cmd_parms *cmd, char *struct_pt
        so the server can be moved or mirrored with less pain.  */
     char *p;
     int offset = (int) (long) cmd->info;
+#ifndef OS2
+    arg = ap_os_canonical_filename(cmd->pool, arg);
+#endif
     if (ap_os_is_path_absolute(arg))
 	p = arg;
     else
@@ -1108,6 +1111,9 @@ static cmd_parms default_parms =
 
 API_EXPORT(char *) ap_server_root_relative(pool *p, char *file)
 {
+#ifndef OS2
+    file = ap_os_canonical_filename(p, file);
+#endif
     if(ap_os_is_path_absolute(file))
 	return file;
     return ap_make_full_path(p, ap_server_root, file);
